fixed offcenter header bug

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -7,8 +7,8 @@ header {
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	border: solid red;
-	z-index: 1;
+	background-color: var(--bgyellow);
+	z-index: 2;
 }
 
 header a {
