--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -12,8 +16,8 @@ code {
 		monospace;
 }
 
-#root {
-	width: 100vw;
+.App {
+	position: relative;
 	height: 100vh;
 
 	--bgyellow: #fef7dd;
